Added bbRightMenu to all converted pages

--- a/contactView.html
+++ b/contactView.html
@@ -13,7 +13,7 @@
   </div><!-- /header -->
   <div data-role="content">
 
-    
+<!--this is some text so i can push up to new branch    -->
     <div id="contact">
       <!-- contact data will be loaded here by contacts.js -->
     </div>
@@ -25,3 +25,5 @@
       a flexible solution like BLISS. Having built in flexibility reduces the likelihood you’ll need expensive enhancements. </p>
   </div><!-- /footer -->
 </div>
+
+
