--- a/employeedetails.html
+++ b/employeedetails.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 </head>
-    
+
 <body>
 
 <div id="detailsPage" data-role="page" data-add-back-btn="true">
@@ -11,15 +11,15 @@
 		<h1>Employee Details</h1>
 	</div>
 
-  <div data-role="content"> 
+  <div data-role="content">
 
-  	<img id="employeePic"/>
+  	<!--<img id="employeePic"/>-->
 	<div id="employeeDetails">
        <h3 id="fullName"></h3>
        <p id="employeeTitle"></p>
        <p id="city"></p>
    	</div>
-	 
+
     <ul id="actionList" data-role="listview" data-inset="true"></ul>
 
   </div>
