--- a/employeedetails.html
+++ b/employeedetails.html
@@ -13,7 +13,7 @@
 
   <div data-role="content">
 
-  	<!--<img id="employeePic"/>-->
+  	<!--<img id="employeePic"p'p'ki;oki;plnik/>-->
 	<div id="employeeDetails">
        <h3 id="fullName"></h3>
        <p id="employeeTitle"></p>
